--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=PC-000000337\\SQLEXPRESS;Initial Catalog=onionDb;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
