--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PC-000000337\\SQLEXPRESS;Initial Catalog=onionDb;Integrated Security=True"
+    "DefaultConnection": "Data Source=SQLEXPRESS;Initial Catalog=onionDb;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
